--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,27 +1,20 @@
-name: CI Workflow
+name: Testing
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
-    runs-on: self-hosted  # This ensures the job runs on your self-hosted runner in EKS
+    runs-on: eks_runner
+    container:
+      image: ubuntu:latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+      with:
+        ref: main
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Tests
-        run: npm test
+    - name: Echo Message
+      run: echo "Hello World"
