--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,20 +1,27 @@
-name: Testing
+# This is a basic workflow to help you get started with Actions
+name: Hello World
 
+# Controls when the action will run. 
 on:
-  push:
-    branches:
-      - main
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
-    runs-on: eks_runner
-    container:
-      image: ubuntu:latest
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-      with:
-        ref: main
+    # The type of runner that the job will run on
+    runs-on: self-hosted
 
-    - name: Echo Message
-      run: echo "Hello World"
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs docker hello-world
+      - name: Hello from Docker
+        run: docker run hello-world
