--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,27 +1,19 @@
-# This is a basic workflow to help you get started with Actions
-name: Hello World
-
-# Controls when the action will run. 
+name: Test Runner
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: eks-self-hosted-runner
+    container:
+      image: ubuntu:latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+      with:
+        ref: main
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs docker hello-world
-      - name: Hello from Docker
-        run: docker run hello-world
+    - name: Echo Message
+      run: echo "Hello World"
